# datainsight-lite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
datainsight/: __init__.py  core.py  report_generator.py  reporter.py  visualizations.py
datainsight/datainsight_lite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
datainsight/templates/: report.html
datainsight_lite/datainsight/: __init__.py  reporter.py
datainsight_lite/datainsight/feature_analysis/: bivariate_analysis.py  feature_analysis.py  multivariate_analysis.py  univariate_analysis.py
datainsight_lite/datainsight/reporting/: report_generator.py  reporter.py
datainsight_lite/utils/: __init__.py  basic.py  datatypes.py
datainsight_lite/utils/categorical/: count_frequency_encoder.py  label_binarizer.py  label_encoder.py  label_encoding.py  ordinal_encoder.py
datainsight_lite/utils/preprocessing/categorical/: base_encoder.py  label_encoder.py  one_hot_encoder.py
examples/: cfe_testing.py  count_freq_config.json  lb_testing.py  le_testing.py  orde_testing.py  report.html  test.csv  test.json  test_with_categorical.csv  ver_0.1.0.py
utils/: __init__.py  typing.py
