[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datainsight-lite"
version = "0.1.2"
description = "A one-line EDA report generator for pandas DataFrames."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name="Swakshwar Ghosh", email="ghoshswakshwar@gmail.com" }
]
keywords = ["eda", "data-analysis", "pandas", "report", "visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas>=1.3",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "jinja2>=3.0"
]
[project.urls]
"Homepage" = "https://github.com/swaksh-war/datainsight-lite"
"Repository" = "https://github.com/swaksh-war/datainsight-lite"
"Issues" = "https://github.com/swaksh-war/datainsight-lite/issues"

[tool.setuptools.packages.find]
where = ["datainsight"]

[tool.setuptools.package-data]
"datainsight" = ["templates/*.html"]